2006-06-27  Sven Neumann  <sven@gimp.org>

	* app/core/gimpchannel-select.c
	* app/core/gimpdrawable-bucket-fill.c
	* app/core/gimpdrawable-transform.c
	* app/core/gimpimage-crop.c
	* app/dialogs/image-scale-dialog.c
	* app/tools/gimpforegroundselecttool.c
	* app/tools/gimpfreeselecttool.c
	* app/tools/gimpfuzzyselecttool.c
	* app/tools/gimpmovetool.c
	* plug-ins/gfig/gfig-dialog.c: applied patch from Zbigniew Chyla
	that adds translation context to some problematic strings
	(bug #345982).

2006-06-27  Sven Neumann  <sven@gimp.org>

	* plug-ins/pygimp/gimpui.py: applied patch from Joao S. O. Bueno
	Calligaris that makes PF_FILE use a GtkFileChooserButton. Fixes
	bug #326986.

2006-06-27  Sven Neumann  <sven@gimp.org>

	* app/tools/gimptransformtool.c (gimp_transform_tool_notify_type):
	do not call bounds() and recalc() with a NULL display.  Added
	sanity checks for the display parameter to both functions.
	Fixes bug #345791.

2006-06-27  Sven Neumann  <sven@gimp.org>

	* plug-ins/imagemap/imap_menu.c: commented out the non-functional
	Zoom menu.

2006-06-27  Sven Neumann  <sven@gimp.org>

	* plug-ins/imagemap/imap_preview.c: improved dialog layout.

2006-06-27  Michael Natterer  <mitch@gimp.org>

	* plug-ins/print/print-draw-page.c: s/uft8/utf8/ makes it compile.

2006-06-27  Sven Neumann  <sven@gimp.org>

	* plug-ins/FractalExplorer/FractalExplorer.c
	* plug-ins/common/colortoalpha.c
	* plug-ins/common/depthmerge.c
	* plug-ins/common/illusion.c
	* plug-ins/script-fu/script-fu.c some more canonical procedure
	names that we missed earlier.

2006-06-27  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/CML_explorer.c
	* plug-ins/common/curve_bend.c
	* plug-ins/common/depthmerge.c
	* plug-ins/common/despeckle.c
	* plug-ins/common/fractaltrace.c
	* plug-ins/common/mapcolor.c
	* plug-ins/common/mblur.c
	* plug-ins/common/png.c
	* plug-ins/common/sample_colorize.c
	* plug-ins/common/tga.c
	* plug-ins/common/threshold_alpha.c
	* plug-ins/common/tiler.c